# study_own

./: .gitignore  .gitmodules  README.md  test.go  tt.go
7days/myweb/: test  test.cpp
Book/: test  test.cpp
Book/C1000k/: reactor.c
Book/Client_Test/: OOBDATA_client.cpp  Set_TimeOut_connect.cpp  client_buf.cpp  nonblock_connect.cpp  poll_client_room.cpp
Book/IO_function/: tee_splice.cpp
Book/IPC/: a.out  ipc_private.cpp
Book/Lock/: a.out  critical_data.c  mutex.c  mutex_cond.c  pthread_create.c  pthread_join.c  rw_lock.c  spin_lock.c
Book/Server/: LT_ET.cpp  Pthread_Epoll_OneShot.cpp  SIGURG_server.cpp  TCP_UDP_OnTime.cpp  a.out  poll_server_room.cpp  sendfile.cpp  server_listen.cpp
Book/Sort/: Bubble_Sort.c  Select_sort.c  a.out  bucket_sort.c  count_sort.c  heap_sort.c  insert_sort.c  kmp.c  mergeSort.c  quickSort.c  radix_sort.c  shell_sort.c
Book/Timer/: time_wheel.h
Book/Tree/: Btree.cpp  RBTree.cpp  a.out  brtree.cpp  practice1.cpp
Book/jincheng/: a.out  fork.c  jincheng.c  parentChild.c  shouhujincheng.c  test.c  wait.c
Book/processPool/: CGI_Server.cpp  a.out  syn_asyn_processpool.h
Book/pthread/: a.out  handle_all_signals.cpp  http_conn_304.cpp  http_conn_304.h  locker.h  main.cpp  threadpool.h
Book/puqianglaoshi/: test.cpp
C++_test/: MySort.cpp  Myiter.cpp  Mytimer.cpp  a.out  twopoint.cpp
Code/: a.out  heap.cpp  queue.cpp  test.c  test.cpp
Typora/: .gitignore  A线上问题解决.md  Go.md  IM测试过程.md  IM问题总结.md  accout.md  atodo.md  c#.md  cocos2d.md  docker.md  etcd.md  example.txt  excel.md  flink.md  fluentd.md  git.md  hh.md  hoxi.md  hoxi线上操作.md  http操作.md  im-client.md  im-moudle.md  im.md  im部署细节.md  json.md  k8s.md  libevent.md  lua.md  mac.md  mongo.md  ms.md  ps.md  python.md  react.md  redis.md  rpc.md  shell.md  svn.md  test.md  unity.md  (+41 more)
Typora/C++/: C++网络基础.md  C++设计模式.md  Effecttive总结.md  ms.md  友元函数实例.md  基础.md  小知识.md  操作.md  流对象的处理.md  细枝末节.md  设计模式.md  运算符重载.md
Typora/Linux/: Linux操作基础.md  ubuntu常见问题.md  工具使用.md  常用操作.md  高性能服务器知识.md
Typora/Linux基操！/: ms.md
Typora/Linux系统编程/: ms.md  ubuntu常见问题.md
Typora/MySQL/: MySQL初阶.md  MySQL进阶.md  Navicat for MySQL 15注册激活.md  ms.md  presto.md  常用操作.md  常见问题.md
Typora/Win32/: GDI绘图.md  windows窗口.md  截图.md  控件.md  文件操作.md  线程.md  网络编程.md  菜单.md  进程.md  重要消息.md  钩子.md
Typora/skynet/: 基础语法.md
Typora/test/: ms.md  常见词汇.md  锁.md
Typora/操作系统/: ms.md  基础.md  锁.md
Typora/数据结构/: 图的邻接矩阵.md  深度寻路算法.md
Typora/汇编/: 学习笔记.md
Typora/硬件结构/: 基础.md
Typora/算法学习/: BFS.md  DFS.md  Tips.md  UnionSet.md  kmp.md  quick_sort.md  单调队列.md  堆和优先队列.md  实用技能.md  归并.md  树状数组.md  第一次作业、递归与递推.md  第三次作业、贪心与DP.md  第二次作业、二分和前缀和.md  递归与栈.md  递推算法.md  链表.md  队列.md  高精度算法总结.md  🤔hot100.md
Typora/计算机网络/: TCPUDP代码实现区别.md  TCP协议对话.md  UDP协议对话.md  ms.md  小知识.md  网络基础.md
go_code/: gin_practice.rar
luaTest/: 1.txt  3.txt  file_rw.lua  function_test.lua  hello.lua  memtable.lua  pairs_ipairs.lua
my_im/server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  ServInfo.cpp  ServInfo.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  UtilPdu.cpp  UtilPdu.h  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  mmpool.cpp  mmpool.h  netlib.cpp  netlib.h  ostype.h  public_define.h  singleton.h  util.cpp  util.h
my_im/server/src/base/jsoncpp/json/: reader.h
my_im/server/src/base/slog/: slog_api.h
my_im/server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  Makefile  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp
my_im/server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  LoginStrategy.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
my_im/server/src/file_server/: CMakeLists.txt  config_util.cpp  config_util.h  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  file_server_util.h  offline_file_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
my_im/server/src/http_msg_server/: AttachData.cpp  CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpConn.h  HttpPdu.cpp  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  RouteServConn.cpp  RouteServConn.h  http_msg_server.cpp  httpmsgserver.conf
my_im/server/src/msfs/: CMakeLists.txt  CriticalSection.h  FileLin.cpp  FileLin.h  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpConn.h  Portable.h  StringUtils.cpp  StringUtils.h  main.cpp
my_im/server/src/msg_server/: AttachData.h  CMakeLists.txt  DBServConn.cpp  FileHandler.cpp  FileHandler.h  FileServConn.cpp  GroupChat.cpp  ImUser.cpp  ImUser.h  LoginServConn.cpp  MsgConn.cpp  MsgConn.h  RouteServConn.cpp  RouteServConn.h  msg_server.cpp
my_im/server/src/route_server/: CMakeLists.txt  RouteConn.cpp  RouteConn.h  UserInfo.cpp  UserInfo.h  route_server.cpp
my_im/server/src/test/test_netlib/: CMakeLists.txt  client.cpp  server.cpp
my_im/server/src/test/test_pool/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  test_dbpool.cpp
myweb/: test.go
pic/: 一文看懂 _ 什么是页缓存（Page Cache） - 云+社区 - 腾讯云.html
skynet-demo/: Makefile  config.game  config.gate  config.test
urlFileToS3_code/: CEB.go  MD5.go  S3.go  go.mod  go.sum  httpPostHbase.go  main.go  main.go.bak  running.go  testdata  tuchang.go
(+515 files in other folders)
